--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,537 @@
+
+#root {
+  /* width: 1260px;
+  height: 400px; */
+  border: white 1px;
+  border-radius: 2px;
+}
+
 body {
-  margin: 0;
+  /* margin: 40px; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   background: #FFF7ED;
+    /* width: 100vw;
+   height: 90vh; */
+    
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+                  /*       code for nav bar      */
+.hostStyle {
+  font-weight: bold;
+  text-decoration: underline;
+  color: #161616;
+}
+
+ a {
+  color: #161616;
+  text-decoration: none;
+  padding: 15px;
+  font-size: 20px;
+}
+
+a:hover{
+  font-weight: bold;
+  text-decoration: underline;
+  color: red;
+} 
+
+
+.vanlife--home {
+  text-decoration: none;
+  color: #161616;
+  font-weight: 800;
+  font-size: 30px;
+  margin-left: 20px;
+}
+
+
+.nav--container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* 
+nav > a {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+} */
+
+.vanlife--about {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-decoration: none;
+  width: 300px;
+  margin-right: 40px;
+}
+
+.hostlink {
+  text-decoration: none;
+  color: red;
+  font-size: 20px;
+}
+
+.abt--h3 {
+  font-size: 20px;
+  font-weight: 400;
+  color: Red;
+  text-decoration: none;
+}
+
+.abt {
+  text-decoration: none;
+  /* margin-right: 20px; */
+  color: Red;
+  font-size: 20px;
+}
+
+                    /*    code for home page      */
+.home--body {
+  height: 80vh;
+  background-image: url(" ./Assets/Images/home-hero.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.home--title, .home--paragraphy, .home--btn {
+  color: white;
+}
+
+.home--title {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  height: 100px;
+  font-size: 50px;
+}
+
+.home--paragraphy {
+  padding-top: 50px;
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: 100;
+}
+
+.home--btn {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  width: 900px;
+  height: 40px;
+  font-weight: 400;
+  font-size: 15px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  background-color: rgb(214, 125, 48);
+  padding: 10px;
+  position: absolute;
+  left: 180px;
+  top: 500px;
+}
+
+/*** VAN PAGES ***/
+.van-list-container {
+  padding-inline: 23px
+}
+
+.van-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  gap: 34px;
+  margin-top: 57px;
+}
+
+.van-tile a {
+  color: #161616;
+  text-decoration: none;    
+}
+
+.van-tile img {
+  max-width: 100%;
+  max-height: 60%;
+  border-radius: 5px;
+}
+
+.van-list-container button {
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.van-type {
+  height: 34px;
+  padding: 6px 26px;
+  font-style: normal;
+  font-weight: 500;
+  border: none;
+  border-radius: 5px;
+  background-color: #FFEAD0;
+  color: #4D4D4D;
+  transition: 200ms all cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.van-type:hover {
+  color: #FFEAD0;
+}
+
+.van-type:focus {
+  outline: none;
+}
+
+.van-type.selected {
+  color: #FFEAD0;
+}
+
+.van-type.simple:hover, .van-type.simple.selected {
+  background-color: #E17654;
+}
+
+.van-type.rugged:hover, .van-type.rugged.selected {
+  background-color: #115E59;
+}
+
+.van-type.luxury:hover, .van-type.luxury.selected {
+  background-color: #161616;
+}
+
+.van-type.clear-filters {
+  margin-left: -20px;
+  height: 34px;
+  padding: 6px 26px;
+  font-style: normal;
+  font-weight: 500;
+  border: none;
+  border-radius: 5px;
+  text-decoration: underline;
+  background-color: transparent;
+  color: #4D4D4D;
+}
+
+i[class*='van-type-'] {
+  padding: 7px 14px;
+}
+
+                  /*    Van Detail page code     */
+
+.van-detail-container {
+  padding: 27px;
+  }
+  
+.van-detail-container .back-button {
+  color: black;
+  text-decoration: none;
+  }
+  
+.van-detail-container .back-button:visited {
+      
+ }
+  
+.van-detail-container .back-button span {
+  text-decoration: underline;
+ }
+  
+.van-detail {
+  display: flex;
+  flex-direction: column;
+  color: #161616;
+}
+  
+.van-detail img {
+  border-radius: 5px;
+  margin-block: 47px;
+  width: 60%;
+  height: 500px;
+  margin-left: 10px;
+}
+  
+.van-detail h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+  
+.van-detail > i {
+  align-self: flex-start;
+}
+  
+.van-detail .van-price {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+  
+.van-detail .van-price span {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+  
+.van-detail .link-button {
+  background-color: #FF8C38;
+  color: white;
+  font-size: 1.125rem;
+}                  
+
+
+
+
+                       /*         code for about             */
+
+ .Img {
+  width: 100%;
+  height: 350px;
+  padding-top: 20px;
+ }
+ 
+ .about--title {
+  display: flex;
+  justify-content: center;
+  /* margin-left: 50px; */
+  font-size: 40px;
+  font-weight: 600;
+  width: 1240px;
+ }
+
+ .abt--paragraph, .abt--paragraph__2  {
+  display: flex;
+  text-align: justify;
+  /* margin-right: 40px; */
+  text-indent: 40px;
+  width: 1200px;
+  font-size: 19px;
+
+ }
+
+ .abt--container{
+  height: 150px;
+  margin: 8px 40px 20px;
+  background-color: rgb(248, 204, 129);
+  border-radius: 5px;
+ }
+
+ .abt--h2__1, .abt--h2__2 {
+  display: flex;
+  margin: 0;
+  margin-left: 200px;
+  text-align: justify;
+ }
+ .abt--h2__1 {
+  padding-top: 15px;
+  font-size: 25px;
+ }
+ .abt--h2__2{
+  font-size: 25px;
+  font-weight: 600;
+  /* padding-top: 2px; */
+ }
+
+ .btn--black {
+  width: 150px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  position: relative;
+  left: 205px;
+  bottom: -15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+ }
+
+ .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  background-color: black;
+  color: white;
+  margin-block: 20px;
+ }
+
+.host-nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 350px;
+  margin-top: 20px;
+}
+
+
+.link {
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+}
+
+              /*                          Host van                              */
+/*
+.vanList {
+  display: flex;
+  width: 98%;
+  height: 80px;
+  margin: 20px;
+  padding: 30px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+ .vanList img {
+  width: 50%;
+  height: 10vh;
+} 
+.pic {
+  width: 20%;
+}
+
+.vanList--sub {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+   align-items: center; 
+}
+.head {
+  margin-bottom: 0px;
+}
+
+.bus {
+  display: flex;
+} */
+
+
+.host-van-link-wrapper {
+  color: unset;
+  text-decoration: unset;
+}
+
+.host-vans-list {
+  padding-inline: 26px;
+}
+
+.host-vans-title {
+  padding-inline: 26px;
+}
+
+.host-van-single {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  margin-bottom: 15px;
+  padding-block: 18px;
+  padding-left: 24px;
+}
+
+.host-van-single > img {
+  height: 70px;
+  border-radius: 5px;
+  margin-right: 17px;
+}
+
+.host-van-info h3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-block: 10px;
+}
+
+.host-van-info p {
+  margin-block: 10px;
+}
+
+.host-van-detail-layout-container {
+  background-color: white;
+  padding: 24px;
+  margin: 30px 26px;
+}
+
+.host-van-detail {
+  display: flex;
+  align-items: center;
+}
+
+.host-van-detail > img {
+  height: 160px;
+  border-radius: 5px;
+  margin-right: 20px;
+}
+
+.host-van-detail-info-text > h3 {
+  margin-top: 24px;
+  margin-bottom: 5px;
+  font-size: 26px;
+  font-weight: 700;
+}
+
+.host-van-detail-info-text > h4 {
+  font-size: 20px;
+  margin-block: 0;
+}
+
+.back-button {
+  display: block;
+  color: black;
+  text-decoration: none;
+  margin-top: 60px;
+  margin-left: 26px;
+}
+
+.host-van-detail-nav {
+  display: flex;
+  margin-block: 25px;
+}
+
+.host-van-detail-nav a {
+  text-decoration: none;
+  color: #4D4D4D;
+  font-weight: 500;
+  padding: 5px 20px;
+}
+
+.host-van-detail-nav a:first-of-type {
+  text-decoration: none;
+  color: #4D4D4D;
+  font-weight: 500;
+  padding: 5px 15px;
+  margin-left: -15px;
+}
+
+.host-van-detail-nav a:hover {
+  color: #161616;
+  text-decoration: underline;
+  font-weight: 700;
+}
+
+.host-van-detail-info > h4 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+}
+.host-van-detail-info > h4 > span {
+  font-weight: 500;
+}
+
+.host-van-price {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.host-van-price > span {
+  font-size: 16px;
+  color: #4D4D4D;
+}
+
+.host-van-detail-image {
+  height: 100px;
+  border-radius: 5px;
 }
